fix overflow issue

--- a/css/queries.css
+++ b/css/queries.css
@@ -575,6 +575,7 @@
     color: #666;
     width: 100%;
     transition: all 0.4s;
+    font-size: 1.8rem;
   }
   .btn-active {
     background-color: #fff !important;
