--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 html {
   font-size: 62.5%;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 body {
